# mpl-direct-layout

./: .gitignore  LICENSE  README.md  benchmark_simple.py  benchmark_speed.py  benchmark_timing_memory.txt  check_aspect.py  check_aspect_detailed.py  pyproject.toml  test_shrink.py
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml  docs.yml  tests.yml
docs/: api.rst  comparison.rst  conf.py  index.rst  usage.rst
src/mpl_direct_layout/: __init__.py  _engine.py  _register.py
tests/: conftest.py  test_layout.py
