[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpl-direct-layout"
version = "0.1.0"
description = "A kiwisolver-free layout engine for Matplotlib"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["matplotlib", "layout", "axes", "figure"]
authors = [
    { name = "Jody Klymak", email = "jklymak@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.9",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mpl"]
docs = ["sphinx", "sphinx-rtd-theme", "numpydoc"]

[project.urls]
Repository = "https://github.com/jklymak/mpl-direct-layout"

[tool.hatch.build.targets.wheel]
packages = ["src/mpl_direct_layout"]

[tool.pytest.ini_options]
addopts = "--mpl-default-tolerance=2 --mpl-baseline-path=tests/baseline_images"
testpaths = ["tests"]
